--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <nav>
             <ul>
-                <li><a href="http://">HOME</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
