criação do menu

--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        
+    <header>
+        <div class="container">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="base.html">base</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
+    <main>
+        <section>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi iste expedita laborum aut obcaecati, 
+                possimus quisquam harum autem ab aliquam, excepturi earum ipsa vel impedit culpa dolorum perferendis 
+                provident tempora.
+                <img class="perfil" src="img/jota.png" alt="eu" width="460px">
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p id="direitos">Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
