--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
 </head>
 <body>
     <header>
-        <h1>Logo</h1>
-        
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="base.html">base</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur 
-            adipisicing elit. Nihil cum, 
-            consequuntur sequi unde voluptas 
-            illum iure expedita sed magnam iusto, 
-            animi vero, quas fugit aliquid omnis
-            voluptatum. Doloremque, ad repellat.
-        </p>
+        <section>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi iste expedita laborum aut obcaecati, 
+                possimus quisquam harum autem ab aliquam, excepturi earum ipsa vel impedit culpa dolorum perferendis 
+                provident tempora.
+                <img class="perfil" src="img/jota.png" alt="eu" width="460px">
+            </p>
+        </section>
     </main>
 
     <footer>
-
+        <p id="direitos">Todos os direitos reservados</p>
     </footer>
 
 
