alterando as informações

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <main>
         <section>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi iste expedita laborum aut obcaecati, 
-                possimus quisquam harum autem ab aliquam, excepturi earum ipsa vel impedit culpa dolorum perferendis 
-                provident tempora.
+                Desenvolvedor em constante evolução, apaixonado por criar soluções 
+                digitais que unem design e funcionalidade. Este é 
+                apenas um vislumbre da minha trajetória <a href="sobre.html">saiba mais</a>
                 <img class="perfil" src="img/jota.png" alt="eu" width="460px">
             </p>
         </section>
