alterando as informações e adicionando o footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
-                    <li><a href="base.html">base</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,17 +21,33 @@
     
     <main>
         <section>
+            <h1 id="titulo">Seja Bem-Vindo ao Meu Site!</h1>
+
             <p>
-                Desenvolvedor em constante evolução, apaixonado por criar soluções 
-                digitais que unem design e funcionalidade. Este é 
-                apenas um vislumbre da minha trajetória <a href="sobre.html">saiba mais</a>
-                <img class="perfil" src="img/jota.png" alt="eu" width="460px">
+                Sou um desenvolvedor que adora transformar ideias em soluções digitais criativas e funcionais. Meu foco é combinar tecnologia e criatividade para construir experiências memoráveis. No meu portfólio, você encontrará projetos que unem essas paixões. Ah, e se você estiver com alguma dúvida sobre o que estou fazendo, pode perguntar, mas não espere um conselho do Chandler, porque sou melhor com o código do que com comentários sarcásticos.
             </p>
+
+            <div class="containerB">
+                <a href="sobre.html"><button class="botao">Saiba Mais</button></a>
+            </div>
+
         </section>
     </main>
 
-    <footer>
-        <p id="direitos">Todos os direitos reservados</p>
+    <footer id="direitos">
+        <div class="container2">
+        <p>Todos os direitos reservados.</p>
+
+        <a href="https://github.com/Dimi-005" target="_blank">
+        <img src="img/github.png" alt="">
+        Github
+        </a>
+
+        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+        <img src="img/linkedin.png" alt="">
+        linkedin
+        </a>
+        </div>
     </footer>
 
 
