--- a/sobre.html
+++ b/sobre.html
@@ -13,8 +13,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="sobre.html">Contato</a></li>
-                    <li><a href="base.html">base</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,17 +21,41 @@
 
     <main>
         <section>
+            <h2 id="titulo2">Sobre Mim</h2>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi iste expedita laborum aut obcaecati, 
-                possimus quisquam harum autem ab aliquam, excepturi earum ipsa vel impedit culpa dolorum perferendis 
-                provident tempora.
-                <img class="perfil" src="img/jota.png" alt="eu" width="460px">
+                Sou Dimitri Marin Gomes, um desenvolvedor em formação contínua. Minha jornada profissional começou com o curso técnico de Desenvolvimento de Sistemas na ETEC de Poá e agora se expande com a graduação em Análise e Desenvolvimento de Sistemas na UMC. Meu foco é a área de front-end, e estou me especializando em criar interfaces que unem beleza e funcionalidade, com um grande interesse em UX/UI Design. Atualmente, meu objetivo é encontrar um estágio para aplicar meu conhecimento e crescer como profissional.
+                <img class="perfil" src="img/perfil.jpg" alt="Dimitri Marin Gomes Perfil" width="150px">
             </p>
+        </section>
+
+        <section>
+            <h2>Habilidades Técnicas</h2>
+                <ul class="listaHabi">
+                    <li>
+                        HTML & CSS: Domínio na construção e estilização de interfaces web, garantindo estrutura e design responsivo.
+                    </li>
+                    <br>
+                    <li>
+                        PHP & Python: Conhecimento básico em ambas as linguagens, o que me permite atuar em diferentes contextos de desenvolvimento.
+                    </li>
+                </ul>
         </section>
     </main>
 
-    <footer>
-        <p id="direitos">Todos os direitos reservados</p>
+    <footer id="direitos">
+        <div class="container2">
+        <p>Todos os direitos reservados.</p>
+
+        <a href="https://github.com/Dimi-005" target="_blank">
+        <img src="img/github.png" alt="">
+        Github
+        </a>
+
+        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+        <img src="img/linkedin.png" alt="">
+        linkedin
+        </a>
+        </div>
     </footer>
 </body>
 </html>
