--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,6 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
-                    <li><a href="base.html">base</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,17 +21,35 @@
     
     <main>
         <section>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi iste expedita laborum aut obcaecati, 
-                possimus quisquam harum autem ab aliquam, excepturi earum ipsa vel impedit culpa dolorum perferendis 
-                provident tempora.
-                <img class="perfil" src="img/jota.png" alt="eu" width="460px">
-            </p>
+            <form action="#" method="post">
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome" name="nome" required><br><br>
+
+                <label for="email">E-mail:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="mensagem">Mensagem:</label><br>
+                <textarea id="mensagem" name="mensagem" rows="4" required></textarea><br><br>
+
+                <button type="submit">Enviar</button>
+            </form>
         </section>
     </main>
 
-    <footer>
-        <p id="direitos">Todos os direitos reservados</p>
+    <footer id="direitos">
+        <div class="container2">
+        <p>Todos os direitos reservados.</p>
+
+        <a href="https://github.com/Dimi-005" target="_blank">
+        <img src="img/github.png" alt="">
+        Github
+        </a>
+
+        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+        <img src="img/linkedin.png" alt="">
+        linkedin
+        </a>
+        </div>
     </footer>
 </body>
 </html>
