--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -18,38 +20,39 @@
             </nav>
         </div>
     </header>
-    
+
     <main>
         <section>
             <h1 id="titulo">Seja Bem-Vindo ao Meu Site!</h1>
 
             <p>
-                Sou um desenvolvedor que adora transformar ideias em soluções digitais criativas e funcionais. Meu foco é combinar tecnologia e criatividade para construir experiências memoráveis. No meu portfólio, você encontrará projetos que unem essas paixões. Ah, e se você estiver com alguma dúvida sobre o que estou fazendo, pode perguntar, mas não espere um conselho do Chandler, porque sou melhor com o código do que com comentários sarcásticos.
+                Sou um desenvolvedor que adora transformar ideias em soluções digitais criativas e funcionais. Meu foco
+                é combinar tecnologia e criatividade para construir experiências memoráveis. No meu portfólio, você
+                encontrará projetos que unem essas paixões. Ah, e se você estiver com alguma dúvida sobre o que estou
+                fazendo, pode perguntar, mas não espere um conselho do Chandler, porque sou melhor com o código do que
+                com comentários sarcásticos.
             </p>
 
             <div class="containerB">
-                <a href="sobre.html"><button class="botao">Saiba Mais</button></a>
+                <a href="sobre.html">Saiba Mais</a>
             </div>
 
         </section>
     </main>
 
     <footer id="direitos">
-        <div class="container2">
         <p>Todos os direitos reservados.</p>
+        <div class="container2">
 
-        <a href="https://github.com/Dimi-005" target="_blank">
-        <img src="img/github.png" alt="">
-        Github
-        </a>
+            <a href="https://github.com/Dimi-005" target="_blank">
+                <img src="img/github.png" alt="">
+            </a>
 
-        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
-        <img src="img/linkedin.png" alt="">
-        linkedin
-        </a>
+            <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+                <img src="img/linkedin.png" alt="">
+            </a>
         </div>
     </footer>
-
-
 </body>
+
 </html>
