--- a/contato.html
+++ b/contato.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contrato</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -18,10 +20,12 @@
             </nav>
         </div>
     </header>
-    
+
     <main>
         <section>
             <form action="#" method="post">
+                <h2 class="h2contato">Entre em Contato</h2>
+
                 <label for="nome">Nome:</label><br>
                 <input type="text" id="nome" name="nome" required><br><br>
 
@@ -31,25 +35,24 @@
                 <label for="mensagem">Mensagem:</label><br>
                 <textarea id="mensagem" name="mensagem" rows="4" required></textarea><br><br>
 
-                <button type="submit">Enviar</button>
+                <button class="botao" type="submit">Enviar</button>
             </form>
         </section>
     </main>
 
     <footer id="direitos">
-        <div class="container2">
         <p>Todos os direitos reservados.</p>
+        <div class="container2">
 
-        <a href="https://github.com/Dimi-005" target="_blank">
-        <img src="img/github.png" alt="">
-        Github
-        </a>
+            <a href="https://github.com/Dimi-005" target="_blank">
+                <img src="img/github.png" alt="">
+            </a>
 
-        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
-        <img src="img/linkedin.png" alt="">
-        linkedin
-        </a>
+            <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+                <img src="img/linkedin.png" alt="">
+            </a>
         </div>
     </footer>
 </body>
+
 </html>
