--- a/sobre.html
+++ b/sobre.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -20,42 +22,48 @@
     </header>
 
     <main>
-        <section>
+        <section class="sobre">
+            <img class="perfil" src="img/perfil.jpg" alt="Dimitri Marin Gomes Perfil">
             <h2 id="titulo2">Sobre Mim</h2>
             <p>
-                Sou Dimitri Marin Gomes, um desenvolvedor em formação contínua. Minha jornada profissional começou com o curso técnico de Desenvolvimento de Sistemas na ETEC de Poá e agora se expande com a graduação em Análise e Desenvolvimento de Sistemas na UMC. Meu foco é a área de front-end, e estou me especializando em criar interfaces que unem beleza e funcionalidade, com um grande interesse em UX/UI Design. Atualmente, meu objetivo é encontrar um estágio para aplicar meu conhecimento e crescer como profissional.
-                <img class="perfil" src="img/perfil.jpg" alt="Dimitri Marin Gomes Perfil" width="150px">
+                Sou Dimitri Marin Gomes, um desenvolvedor em formação contínua. Minha jornada profissional começou com o
+                curso técnico de Desenvolvimento de Sistemas na ETEC de Poá e agora se expande com a graduação em
+                Análise e Desenvolvimento de Sistemas na UMC. Meu foco é a área de front-end, e estou me especializando
+                em criar interfaces que unem beleza e funcionalidade, com um grande interesse em UX/UI Design.
+                Atualmente, meu objetivo é encontrar um estágio para aplicar meu conhecimento e crescer como
+                profissional.
             </p>
         </section>
 
         <section>
-            <h2>Habilidades Técnicas</h2>
-                <ul class="listaHabi">
-                    <li>
-                        HTML & CSS: Domínio na construção e estilização de interfaces web, garantindo estrutura e design responsivo.
-                    </li>
-                    <br>
-                    <li>
-                        PHP & Python: Conhecimento básico em ambas as linguagens, o que me permite atuar em diferentes contextos de desenvolvimento.
-                    </li>
-                </ul>
+            <h2>Habilidades e Técnicas</h2>
+            <ul class="listaHabi">
+                <li>
+                    HTML & CSS: Domínio na construção e estilização de interfaces web, garantindo estrutura e design
+                    responsivo.
+                </li>
+                <br>
+                <li>
+                    PHP & Python: Conhecimento básico em ambas as linguagens, o que me permite atuar em diferentes
+                    contextos de desenvolvimento.
+                </li>
+            </ul>
         </section>
     </main>
 
     <footer id="direitos">
-        <div class="container2">
         <p>Todos os direitos reservados.</p>
+        <div class="container2">
 
-        <a href="https://github.com/Dimi-005" target="_blank">
-        <img src="img/github.png" alt="">
-        Github
-        </a>
+            <a href="https://github.com/Dimi-005" target="_blank">
+                <img src="img/github.png" alt="">
+            </a>
 
-        <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
-        <img src="img/linkedin.png" alt="">
-        linkedin
-        </a>
+            <a href="https://www.linkedin.com/in/dimitri-marin-gomes-292132377/" target="_blank">
+                <img src="img/linkedin.png" alt="">
+            </a>
         </div>
     </footer>
 </body>
+
 </html>
